<resources>
    <string name="app_name">Hawk-Eyed Citizen</string>
    <string name="title_activity_main">Main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_new_account">No account yet? Create one</string>

    <string name="facebook_app_id">161829987778226</string>
    <string name="fb_login_protocol_scheme">fb161829987778226</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_register">Register new account</string>
    <string name="name_hint">Name</string>
    <string name="create_account">Create account</string>
    <string name="name_error">Name must have more than 3 characters</string>
    <string name="email_error">Type a valid Email.</string>
    <string name="password_error">Password needs at least 6 characters.</string>
    <string name="server_id_token">896372227662-5ph3dk3gerou949ufhk3ntl9qprg9q1k.apps.googleusercontent.com</string>
    <string name="facebook_cancel_login">User cancelled login!</string>
    <string name="select_image">Select image from:</string>

    <string-array name="image_options">
        <item>Gallery</item>
        <item>Camera</item>
    </string-array>

    <string-array name="location_options">
        <item>Current Location</item>
        <item>Another Location</item>
    </string-array>

    <string name="title_activity_register_problem">Register a problem</string>
    <string name="add_photo">Add photo</string>
    <string name="description_hint">Problem description</string>
    <string name="location">Location</string>
    <string name="current_location">Current location</string>
    <string name="save">Save</string>
    <string name="location_title">Where did you found the problem?</string>

    <string-array name="problem_categories">
        <item>Select the category</item>
        <item>Pot Hole</item>
        <item>Leak</item>
        <item>Traffic signal</item>
    </string-array>
    <string name="title_activity_find_location">Other Location</string>
    <string name="success">Problem registered successfully!</string>
    <string name="loading">Loading…</string>
    <string name="select_location">Select location</string>
    <string name="description_mandatory">Describe the problem found.</string>
    <string name="category_mandatory">Please select the category</string>
    <string name="title_activity_view_problem">Problem</string>
    <string name="user">User:</string>
    <string name="category">Category:</string>
    <string name="problem_description">Problem description</string>
    <string name="clap">Give a clap</string>
    <string name="problem_solved">Problem solved</string>
    <string name="share">Share problem</string>

</resources>
