<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.victorpettengill.hawk_eyedcitizen.ui.ViewProblemActivity"
    tools:showIn="@layout/activity_view_problem">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin">

        <ImageView
            android:id="@+id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content"
            android:background="@drawable/placeholder"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@+id/image"
            android:text="@string/user"
            android:textStyle="bold"
            android:id="@+id/user_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="@+id/user_label"
            app:layout_constraintBottom_toBottomOf="@+id/user_label"
            app:layout_constraintStart_toEndOf="@id/user_label"
            tools:text="Victor Pettengill Fernandes"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/user_label"
            android:text="@string/category"
            android:textStyle="bold"
            android:id="@+id/category_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="@+id/category_label"
            app:layout_constraintBottom_toBottomOf="@+id/category_label"
            app:layout_constraintStart_toEndOf="@id/category_label"
            tools:text="Pot hole"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/category_label"
            android:text="@string/problem_description"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/fab_margin"
            android:id="@+id/description_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/description_label"
            tools:text="Problem description"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:text="@string/clap"
            android:id="@+id/clap"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/clap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:text="@string/problem_solved"
            android:id="@+id/problem_solved"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
            android:background="#4169E1"
            app:layout_constraintTop_toBottomOf="@+id/problem_solved"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:text="@string/share"
            android:id="@+id/share"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>