<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.victorpettengill.hawk_eyedcitizen.ui.RegisterProblemActivity"
    tools:showIn="@layout/activity_register_problem">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/ic_problem_add_photo"
        android:scaleType="center"
        android:id="@+id/image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/fab_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintEnd_toEndOf="@+id/image"
        android:text="@string/add_photo"
        android:id="@+id/add_photo"/>

    <Spinner
        android:layout_width="0dp"
        android:id="@+id/category"
        android:layout_height="50dp"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_photo"
        android:entries="@array/problem_categories"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:id="@+id/categorydivider"
        app:layout_constraintTop_toBottomOf="@+id/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/categorydivider"
        android:text="@string/category_mandatory"
        android:id="@+id/categoryMandatory"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/error_color"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:id="@+id/description_layout"
        android:layout_marginTop="@dimen/fab_margin"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/categoryMandatory">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:hint="@string/description_hint"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/label_location"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@+id/description_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_location"
        android:layout_margin="@dimen/fab_margin"
        android:id="@+id/location"
        android:drawableStart="@drawable/ic_location"
        android:text="@string/current_location"
        android:gravity="start|center_vertical"
        android:drawablePadding="@dimen/fab_margin"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:drawableLeft="@drawable/ic_location" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/other_address"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/fab_margin"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/loading"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/message"
            android:text="@string/loading"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
